[package]
name = "dnpak"
description = "A Rust implementation of Dragon Nest PAK structure file"
authors  = ["Muhammad Dony Mulya <vveirt@gmail.com>"]
version = "1.2.0"
license = "WTFPL"
edition = "2018"

[dependencies]
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
glob = "0.3.0"
