[package]
name = "dnpak"
description = "A Rust implementation of Dragon Nest PAK structure file"
authors  = ["Muhammad Dony Mulya <vveirt@gmail.com>"]
version = "1.3.2"
license = "WTFPL"
edition = "2021"

[dependencies]
flate2 = { version = "1.0.22", features = ["zlib"], default-features = false }
glob = "0.3.0"
cfg-if = "1.0.0"
